{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 62,
  "lineage": "0ef19491-862b-17e1-f570-0387a7370aca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089955ebaaa1f593c",
            "association_id": "eipassoc-0c6796283cc4130e1",
            "domain": "vpc",
            "id": "eipalloc-089955ebaaa1f593c",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-04bf83df76e4b5383",
            "private_dns": "ip-10-20-0-120.eu-central-1.compute.internal",
            "private_ip": "10.20.0.120",
            "public_dns": "ec2-3-71-235-33.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.71.235.33",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "3TA-EIP1"
            },
            "tags_all": {
              "Name": "3TA-EIP1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.threetierarch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e17dfc56fb99c3cc",
            "association_id": "eipassoc-0ee7b3c30c3827cec",
            "domain": "vpc",
            "id": "eipalloc-0e17dfc56fb99c3cc",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-030872aa020fc3474",
            "private_dns": "ip-10-20-3-233.eu-central-1.compute.internal",
            "private_ip": "10.20.3.233",
            "public_dns": "ec2-3-121-55-91.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.121.55.91",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "3TA-EIP2"
            },
            "tags_all": {
              "Name": "3TA-EIP2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.threetierarch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apptier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04075458d3b9f6a5b",
            "arn": "arn:aws:ec2:eu-central-1:506820257931:instance/i-08f03f15143db86bc",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "3TA-Instance-Profile",
            "id": "i-08f03f15143db86bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c297dcc524aec249",
            "private_dns": "ip-10-20-1-127.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03e9415db812dd558",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0584fff05640b8a8f",
            "tags": {
              "Name": "AppLayer"
            },
            "tags_all": {
              "Name": "AppLayer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0505c74bc3a8e3cba"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_db_subnet_group.db_subnet_group",
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.threeta_iam_ec2_instance_role",
            "aws_rds_cluster.dbcluster",
            "aws_rds_cluster_instance.dbclusterinstance",
            "aws_security_group.db-sg",
            "aws_security_group.internallb-sg",
            "aws_security_group.internetlb-sg",
            "aws_security_group.private-instance-sg",
            "aws_security_group.webtier-sg",
            "aws_ssm_parameter.my_ip_address",
            "aws_subnet.private_db_subnet_az_1",
            "aws_subnet.private_db_subnet_az_2",
            "aws_subnet.private_subnet_az_1",
            "aws_vpc.threetierarch_vpc",
            "data.aws_iam_policy.threetas3readonly",
            "data.aws_iam_policy.threetassm",
            "data.aws_iam_policy_document.threetatrustedentities",
            "data.aws_ssm_parameter.rds_password",
            "data.aws_ssm_parameter.rds_username",
            "data.http.icanhazip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webtier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04075458d3b9f6a5b",
            "arn": "arn:aws:ec2:eu-central-1:506820257931:instance/i-081a71cc88181a051",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "3TA-Instance-Profile",
            "id": "i-081a71cc88181a051",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-039cd85472e4a8f9b",
            "private_dns": "ip-10-20-0-115.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.0.115",
            "public_ip": "3.67.113.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c3c775fd7a5b8d6a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b8d18baaf3270830",
            "tags": {
              "Name": "WebLayer"
            },
            "tags_all": {
              "Name": "WebLayer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09ba7d9fe95eb44b5"
            ]
          },
          "dependencies": [
            "aws_db_subnet_group.db_subnet_group",
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.threeta_iam_ec2_instance_role",
            "aws_instance.apptier",
            "aws_lb.threeta_intlb",
            "aws_rds_cluster.dbcluster",
            "aws_rds_cluster_instance.dbclusterinstance",
            "aws_security_group.db-sg",
            "aws_security_group.internallb-sg",
            "aws_security_group.internetlb-sg",
            "aws_security_group.private-instance-sg",
            "aws_security_group.webtier-sg",
            "aws_ssm_parameter.my_ip_address",
            "aws_subnet.private_db_subnet_az_1",
            "aws_subnet.private_db_subnet_az_2",
            "aws_subnet.private_subnet_az_1",
            "aws_subnet.private_subnet_az_2",
            "aws_subnet.public_subnet_az_1",
            "aws_vpc.threetierarch_vpc",
            "data.aws_iam_policy.threetas3readonly",
            "data.aws_iam_policy.threetassm",
            "data.aws_iam_policy_document.threetatrustedentities",
            "data.aws_ssm_parameter.rds_password",
            "data.aws_ssm_parameter.rds_username",
            "data.http.icanhazip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:506820257931:internet-gateway/igw-04126186d9dfa0de0",
            "id": "igw-04126186d9dfa0de0",
            "owner_id": "506820257931",
            "tags": {
              "Name": "3TA-IGW"
            },
            "tags_all": {
              "Name": "3TA-IGW"
            },
            "vpc_id": "vpc-0d5db24cc9c07063a"
          },
          "dependencies": [
            "aws_vpc.threetierarch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "threeta_extlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:506820257931:loadbalancer/app/web-tier-external-lb/b1e816841de86044",
            "arn_suffix": "app/web-tier-external-lb/b1e816841de86044",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-tier-external-lb-1608949266.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:506820257931:loadbalancer/app/web-tier-external-lb/b1e816841de86044",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-tier-external-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01cb9927b9975e70c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03d8d775aba0a08c3"
              },
              {
                "subnet_id": "subnet-0b8d18baaf3270830"
              }
            ],
            "subnets": [
              "subnet-03d8d775aba0a08c3",
              "subnet-0b8d18baaf3270830"
            ],
            "vpc_id": "vpc-0d5db24cc9c07063a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_db_subnet_group.db_subnet_group",
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.threeta_iam_ec2_instance_role",
            "aws_instance.apptier",
            "aws_instance.webtier",
            "aws_lb.threeta_intlb",
            "aws_rds_cluster.dbcluster",
            "aws_rds_cluster_instance.dbclusterinstance",
            "aws_security_group.db-sg",
            "aws_security_group.internallb-sg",
            "aws_security_group.internetlb-sg",
            "aws_security_group.private-instance-sg",
            "aws_security_group.webtier-sg",
            "aws_ssm_parameter.my_ip_address",
            "aws_subnet.private_db_subnet_az_1",
            "aws_subnet.private_db_subnet_az_2",
            "aws_subnet.private_subnet_az_1",
            "aws_subnet.private_subnet_az_2",
            "aws_subnet.public_subnet_az_1",
            "aws_subnet.public_subnet_az_2",
            "aws_vpc.threetierarch_vpc",
            "data.aws_iam_policy.threetas3readonly",
            "data.aws_iam_policy.threetassm",
            "data.aws_iam_policy_document.threetatrustedentities",
            "data.aws_ssm_parameter.rds_password",
            "data.aws_ssm_parameter.rds_username",
            "data.http.icanhazip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "threeta_intlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:506820257931:loadbalancer/app/app-tier-internal-lb/efe2f3d90885bea1",
            "arn_suffix": "app/app-tier-internal-lb/efe2f3d90885bea1",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-app-tier-internal-lb-1303686428.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:506820257931:loadbalancer/app/app-tier-internal-lb/efe2f3d90885bea1",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-tier-internal-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0500e854b23470eca"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0584fff05640b8a8f"
              },
              {
                "subnet_id": "subnet-088dff1f24234fd21"
              }
            ],
            "subnets": [
              "subnet-0584fff05640b8a8f",
              "subnet-088dff1f24234fd21"
            ],
            "vpc_id": "vpc-0d5db24cc9c07063a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_db_subnet_group.db_subnet_group",
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.threeta_iam_ec2_instance_role",
            "aws_instance.apptier",
            "aws_rds_cluster.dbcluster",
            "aws_rds_cluster_instance.dbclusterinstance",
            "aws_security_group.db-sg",
            "aws_security_group.internallb-sg",
            "aws_security_group.internetlb-sg",
            "aws_security_group.private-instance-sg",
            "aws_security_group.webtier-sg",
            "aws_ssm_parameter.my_ip_address",
            "aws_subnet.private_db_subnet_az_1",
            "aws_subnet.private_db_subnet_az_2",
            "aws_subnet.private_subnet_az_1",
            "aws_subnet.private_subnet_az_2",
            "aws_vpc.threetierarch_vpc",
            "data.aws_iam_policy.threetas3readonly",
            "data.aws_iam_policy.threetassm",
            "data.aws_iam_policy_document.threetatrustedentities",
            "data.aws_ssm_parameter.rds_password",
            "data.aws_ssm_parameter.rds_username",
            "data.http.icanhazip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "threeta_extlb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:506820257931:listener/app/web-tier-external-lb/b1e816841de86044/70ee4f2ab303394c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:506820257931:targetgroup/WebTierTargetGroup/9d509a615b2ee7a2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:506820257931:listener/app/web-tier-external-lb/b1e816841de86044/70ee4f2ab303394c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:506820257931:loadbalancer/app/web-tier-external-lb/b1e816841de86044",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_db_subnet_group.db_subnet_group",
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.threeta_iam_ec2_instance_role",
            "aws_instance.apptier",
            "aws_instance.webtier",
            "aws_lb.threeta_extlb",
            "aws_lb.threeta_intlb",
            "aws_lb_target_group.threeta_web_tier_target_group",
            "aws_rds_cluster.dbcluster",
            "aws_rds_cluster_instance.dbclusterinstance",
            "aws_security_group.db-sg",
            "aws_security_group.internallb-sg",
            "aws_security_group.internetlb-sg",
            "aws_security_group.private-instance-sg",
            "aws_security_group.webtier-sg",
            "aws_ssm_parameter.my_ip_address",
            "aws_subnet.private_db_subnet_az_1",
            "aws_subnet.private_db_subnet_az_2",
            "aws_subnet.private_subnet_az_1",
            "aws_subnet.private_subnet_az_2",
            "aws_subnet.public_subnet_az_1",
            "aws_subnet.public_subnet_az_2",
            "aws_vpc.threetierarch_vpc",
            "data.aws_iam_policy.threetas3readonly",
            "data.aws_iam_policy.threetassm",
            "data.aws_iam_policy_document.threetatrustedentities",
            "data.aws_ssm_parameter.rds_password",
            "data.aws_ssm_parameter.rds_username",
            "data.http.icanhazip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "threeta_intlb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:506820257931:listener/app/app-tier-internal-lb/efe2f3d90885bea1/65b4c14fd874c957",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:506820257931:targetgroup/AppTierTargetGroup/56ee82b2d1fc43f3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:506820257931:listener/app/app-tier-internal-lb/efe2f3d90885bea1/65b4c14fd874c957",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:506820257931:loadbalancer/app/app-tier-internal-lb/efe2f3d90885bea1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_db_subnet_group.db_subnet_group",
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.threeta_iam_ec2_instance_role",
            "aws_instance.apptier",
            "aws_lb.threeta_intlb",
            "aws_lb_target_group.threeta_app_tier_target_group",
            "aws_rds_cluster.dbcluster",
            "aws_rds_cluster_instance.dbclusterinstance",
            "aws_security_group.db-sg",
            "aws_security_group.internallb-sg",
            "aws_security_group.internetlb-sg",
            "aws_security_group.private-instance-sg",
            "aws_security_group.webtier-sg",
            "aws_ssm_parameter.my_ip_address",
            "aws_subnet.private_db_subnet_az_1",
            "aws_subnet.private_db_subnet_az_2",
            "aws_subnet.private_subnet_az_1",
            "aws_subnet.private_subnet_az_2",
            "aws_vpc.threetierarch_vpc",
            "data.aws_iam_policy.threetas3readonly",
            "data.aws_iam_policy.threetassm",
            "data.aws_iam_policy_document.threetatrustedentities",
            "data.aws_ssm_parameter.rds_password",
            "data.aws_ssm_parameter.rds_username",
            "data.http.icanhazip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "threeta_app_tier_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:506820257931:targetgroup/AppTierTargetGroup/56ee82b2d1fc43f3",
            "arn_suffix": "targetgroup/AppTierTargetGroup/56ee82b2d1fc43f3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:506820257931:targetgroup/AppTierTargetGroup/56ee82b2d1fc43f3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "AppTierTargetGroup",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d5db24cc9c07063a"
          },
          "dependencies": [
            "aws_vpc.threetierarch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "threeta_web_tier_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:506820257931:targetgroup/WebTierTargetGroup/9d509a615b2ee7a2",
            "arn_suffix": "targetgroup/WebTierTargetGroup/9d509a615b2ee7a2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:506820257931:targetgroup/WebTierTargetGroup/9d509a615b2ee7a2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "WebTierTargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d5db24cc9c07063a"
          },
          "dependencies": [
            "aws_vpc.threetierarch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089955ebaaa1f593c",
            "association_id": "eipassoc-0c6796283cc4130e1",
            "connectivity_type": "public",
            "id": "nat-09c40ba95bac01c54",
            "network_interface_id": "eni-04bf83df76e4b5383",
            "private_ip": "10.20.0.120",
            "public_ip": "3.71.235.33",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b8d18baaf3270830",
            "tags": {
              "Name": "3TA-NAT-GW-AZ1"
            },
            "tags_all": {
              "Name": "3TA-NAT-GW-AZ1"
            }
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet_az_1",
            "aws_vpc.threetierarch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e17dfc56fb99c3cc",
            "association_id": "eipassoc-0ee7b3c30c3827cec",
            "connectivity_type": "public",
            "id": "nat-06d32d63eff22970b",
            "network_interface_id": "eni-030872aa020fc3474",
            "private_ip": "10.20.3.233",
            "public_ip": "3.121.55.91",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03d8d775aba0a08c3",
            "tags": {
              "Name": "3TA-NAT-GW-AZ2"
            },
            "tags_all": {
              "Name": "3TA-NAT-GW-AZ2"
            }
          },
          "dependencies": [
            "aws_eip.eip2",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet_az_2",
            "aws_vpc.threetierarch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app_route_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:506820257931:route-table/rtb-0f7384faf480caee3",
            "id": "rtb-0f7384faf480caee3",
            "owner_id": "506820257931",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09c40ba95bac01c54",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "3TA-Private-Route-Table-AZ1"
            },
            "tags_all": {
              "Name": "3TA-Private-Route-Table-AZ1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5db24cc9c07063a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw1",
            "aws_subnet.public_subnet_az_1",
            "aws_vpc.threetierarch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app_route_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:506820257931:route-table/rtb-03a05df9637944f74",
            "id": "rtb-03a05df9637944f74",
            "owner_id": "506820257931",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06d32d63eff22970b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "3TA-Private-Route-Table-AZ2"
            },
            "tags_all": {
              "Name": "3TA-Private-Route-Table-AZ2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5db24cc9c07063a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw2",
            "aws_subnet.public_subnet_az_2",
            "aws_vpc.threetierarch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:506820257931:route-table/rtb-01acf4dd3d93fc1b8",
            "id": "rtb-01acf4dd3d93fc1b8",
            "owner_id": "506820257931",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04126186d9dfa0de0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "3TA-PublicRouteTable"
            },
            "tags_all": {
              "Name": "3TA-PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5db24cc9c07063a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.threetierarch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prisubnetassociations1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b6d491d93cd825c",
            "route_table_id": "rtb-0f7384faf480caee3",
            "subnet_id": "subnet-0584fff05640b8a8f"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw1",
            "aws_route_table.private_app_route_az1",
            "aws_subnet.private_subnet_az_1",
            "aws_subnet.public_subnet_az_1",
            "aws_vpc.threetierarch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prisubnetassociations2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f9ec38d7b89c021",
            "route_table_id": "rtb-03a05df9637944f74",
            "subnet_id": "subnet-088dff1f24234fd21"
          },
          "dependencies": [
            "aws_eip.eip2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw2",
            "aws_route_table.private_app_route_az2",
            "aws_subnet.private_subnet_az_2",
            "aws_subnet.public_subnet_az_2",
            "aws_vpc.threetierarch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsubnetassociations1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04913910b0a8e39c0",
            "route_table_id": "rtb-01acf4dd3d93fc1b8",
            "subnet_id": "subnet-0b8d18baaf3270830"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet_az_1",
            "aws_vpc.threetierarch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsubnetassociations2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f81f5f9d0b0beb3",
            "route_table_id": "rtb-01acf4dd3d93fc1b8",
            "subnet_id": "subnet-03d8d775aba0a08c3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet_az_2",
            "aws_vpc.threetierarch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:506820257931:security-group/sg-0db4ba1cf9a1a024a",
            "description": "SG for our databases",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db4ba1cf9a1a024a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3006,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0505c74bc3a8e3cba"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DBSG",
            "name_prefix": "",
            "owner_id": "506820257931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "3TA-DBSG"
            },
            "tags_all": {
              "Name": "3TA-DBSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5db24cc9c07063a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.internallb-sg",
            "aws_security_group.internetlb-sg",
            "aws_security_group.private-instance-sg",
            "aws_security_group.webtier-sg",
            "aws_ssm_parameter.my_ip_address",
            "aws_vpc.threetierarch_vpc",
            "data.http.icanhazip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internallb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:506820257931:security-group/sg-0500e854b23470eca",
            "description": "SG for the internal load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0500e854b23470eca",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09ba7d9fe95eb44b5"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Internal-LB-SG",
            "name_prefix": "",
            "owner_id": "506820257931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "3TA-Internal-LB-SG"
            },
            "tags_all": {
              "Name": "3TA-Internal-LB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5db24cc9c07063a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.internetlb-sg",
            "aws_security_group.webtier-sg",
            "aws_ssm_parameter.my_ip_address",
            "aws_vpc.threetierarch_vpc",
            "data.http.icanhazip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internetlb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:506820257931:security-group/sg-01cb9927b9975e70c",
            "description": "External load balancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01cb9927b9975e70c",
            "ingress": [
              {
                "cidr_blocks": [
                  "95.90.248.35/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Internet-Facing-LB-SG",
            "name_prefix": "",
            "owner_id": "506820257931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "3TA-Internet-Facing-LB-SG"
            },
            "tags_all": {
              "Name": "3TA-Internet-Facing-LB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5db24cc9c07063a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "aws_ssm_parameter.my_ip_address",
            "aws_vpc.threetierarch_vpc",
            "data.http.icanhazip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:506820257931:security-group/sg-0505c74bc3a8e3cba",
            "description": "SG for our private app tier sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0505c74bc3a8e3cba",
            "ingress": [
              {
                "cidr_blocks": [
                  "95.90.248.35/32"
                ],
                "description": "",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0500e854b23470eca"
                ],
                "self": false,
                "to_port": 4000
              }
            ],
            "name": "PrivateInstanceSG",
            "name_prefix": "",
            "owner_id": "506820257931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "3TA-PrivateInstanceSG"
            },
            "tags_all": {
              "Name": "3TA-PrivateInstanceSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5db24cc9c07063a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "aws_security_group.internallb-sg",
            "aws_security_group.internetlb-sg",
            "aws_security_group.webtier-sg",
            "aws_ssm_parameter.my_ip_address",
            "aws_vpc.threetierarch_vpc",
            "data.http.icanhazip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webtier-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:506820257931:security-group/sg-09ba7d9fe95eb44b5",
            "description": "SG for the Web Tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ba7d9fe95eb44b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "95.90.248.35/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01cb9927b9975e70c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebTier-SG",
            "name_prefix": "",
            "owner_id": "506820257931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "3TA-WebTier-SG"
            },
            "tags_all": {
              "Name": "3TA-WebTier-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5db24cc9c07063a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "aws_security_group.internetlb-sg",
            "aws_ssm_parameter.my_ip_address",
            "aws_vpc.threetierarch_vpc",
            "data.http.icanhazip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_subnet_az_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:506820257931:subnet/subnet-0ea494e67738bde69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea494e67738bde69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "506820257931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-DB-Subnet-AZ1 (3TA)"
            },
            "tags_all": {
              "Name": "Private-DB-Subnet-AZ1 (3TA)"
            },
            "vpc_id": "vpc-0d5db24cc9c07063a"
          },
          "dependencies": [
            "aws_vpc.threetierarch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_subnet_az_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:506820257931:subnet/subnet-0fe22c96e13c9f979",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.20.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe22c96e13c9f979",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "506820257931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-DB-Subnet-AZ2 (3TA)"
            },
            "tags_all": {
              "Name": "Private-DB-Subnet-AZ2 (3TA)"
            },
            "vpc_id": "vpc-0d5db24cc9c07063a"
          },
          "dependencies": [
            "aws_vpc.threetierarch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_az_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:506820257931:subnet/subnet-0584fff05640b8a8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0584fff05640b8a8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "506820257931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-AZ1 (3TA)"
            },
            "tags_all": {
              "Name": "Private-Subnet-AZ1 (3TA)"
            },
            "vpc_id": "vpc-0d5db24cc9c07063a"
          },
          "dependencies": [
            "aws_vpc.threetierarch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_az_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:506820257931:subnet/subnet-088dff1f24234fd21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088dff1f24234fd21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "506820257931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-AZ2 (3TA)"
            },
            "tags_all": {
              "Name": "Private-Subnet-AZ2 (3TA)"
            },
            "vpc_id": "vpc-0d5db24cc9c07063a"
          },
          "dependencies": [
            "aws_vpc.threetierarch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:506820257931:subnet/subnet-0b8d18baaf3270830",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.20.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8d18baaf3270830",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "506820257931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-AZ1 (3TA)"
            },
            "tags_all": {
              "Name": "Public-Subnet-AZ1 (3TA)"
            },
            "vpc_id": "vpc-0d5db24cc9c07063a"
          },
          "dependencies": [
            "aws_vpc.threetierarch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:506820257931:subnet/subnet-03d8d775aba0a08c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d8d775aba0a08c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "506820257931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-AZ2 (3TA)"
            },
            "tags_all": {
              "Name": "Public-Subnet-AZ2 (3TA)"
            },
            "vpc_id": "vpc-0d5db24cc9c07063a"
          },
          "dependencies": [
            "aws_vpc.threetierarch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "threetierarch_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:506820257931:vpc/vpc-0d5db24cc9c07063a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0c6048c85f123d516",
            "default_route_table_id": "rtb-04dea945a361ad001",
            "default_security_group_id": "sg-0079fe9a3bc0683e4",
            "dhcp_options_id": "dopt-02fe07f8db7afa374",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d5db24cc9c07063a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04dea945a361ad001",
            "owner_id": "506820257931",
            "tags": {
              "Name": "3TA_VPC"
            },
            "tags_all": {
              "Name": "3TA_VPC"
            }
          }
        }
      ]
    }
  ]
}